# calhacks

./: .gitignore  DEPLOY.md  DEPLOYMENT.md  README.md  STREAMING_IMPLEMENTATION.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  server.js  start-backend.sh  start-frontend.sh  start_frontend.sh  start_server.py  stream.js  tailwind.config.ts  vercel.json
.next/dev/: prerender-manifest.json  trace
.next/dev/cache/: .rscinfo
.next/dev/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/dev/server/app/: page_client-reference-manifest.js
.next/dev/static/chunks/: [root-of-the-server]__0f0ba101._.css  [root-of-the-server]__0f0ba101._.css.map  _04d8f7e6._.js  _04d8f7e6._.js.map  node_modules_69e5a515._.js.map  node_modules_@swc_helpers_cjs_d80fb378._.js.map  src_24c0c5c4._.js  (+12 more)
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  start_server.py
backend/config/: ai_prompt.py
config/: aiPrompt.js  ai_prompt.py
frontend/: Dockerfile  README.md  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Background.tsx  ChatMessage.tsx  ContinuousRecorder.tsx
models/: chat.py
services/: fish_audio.py  janitor_ai.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Background.tsx  ChatInput.tsx  ChatMessage.tsx  ContinuousRecorder.tsx  VoiceRecorder.tsx
src/types/: chat.ts
testing/: runTests.js  testCases.js  testResults-2025-10-25T11-00-20-042Z.json  testResults-2025-10-25T11-03-47-377Z.json  testResults-2025-10-25T11-07-01-137Z.json  testResults-2025-10-25T11-09-35-070Z.json  testResults-2025-10-25T11-13-38-821Z.json  testResults-2025-10-25T11-18-03-599Z.json  testResults-2025-10-25T13-00-12-415Z.json  testResults.json
types/: chat.ts
(+26 files in other folders)
