[tool.uv]
dev-dependencies = []

[tool.uv.sources]
"fastapi-poe" = { "git" = "https://github.com/fastapi-poe/fastapi-poe.git" }

[project]
name = "multiplayer-ai-chat-python"
version = "0.1.0"
description = "A multiplayer chat application with an AI character."
dependencies = [
    "fastapi>=0.111.0",
    "python-socketio>=5.11.2",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.1",
    "fish-audio-sdk>=0.1.13",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.27.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
